// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests CheckboxInput Checked 1`] = `
<div
  data-dark={false}
>
  <div
    className="charcoal-checkbox-input__root"
  >
    <input
      checked={true}
      className="charcoal-checkbox-input__input"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      aria-hidden={true}
      className="charcoal-checkbox-input__overlay"
      data-checked={true}
    >
      <pixiv-icon
        name="24/Check"
        unsafe-non-guideline-scale={0.6666666666666666}
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests CheckboxInput Default 1`] = `
<div
  data-dark={false}
>
  <div
    className="charcoal-checkbox-input__root"
  >
    <input
      className="charcoal-checkbox-input__input"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      aria-hidden={true}
      className="charcoal-checkbox-input__overlay"
    >
      <pixiv-icon
        name="24/Check"
        unsafe-non-guideline-scale={0.6666666666666666}
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests CheckboxInput Disabled 1`] = `
<div
  data-dark={false}
>
  <div
    className="charcoal-checkbox-input__root"
  >
    <input
      checked={false}
      className="charcoal-checkbox-input__input"
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      aria-hidden={true}
      className="charcoal-checkbox-input__overlay"
      data-checked={false}
    >
      <pixiv-icon
        name="24/Check"
        unsafe-non-guideline-scale={0.6666666666666666}
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests CheckboxInput Invalid 1`] = `
<div
  data-dark={false}
>
  <div
    className="charcoal-checkbox-input__root"
  >
    <input
      aria-invalid={true}
      checked={false}
      className="charcoal-checkbox-input__input"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      aria-hidden={true}
      className="charcoal-checkbox-input__overlay"
      data-checked={false}
    >
      <pixiv-icon
        name="24/Check"
        unsafe-non-guideline-scale={0.6666666666666666}
      />
    </div>
  </div>
</div>
`;
